--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -114,4 +114,5 @@
 
     <!-- DO NOT TRANSLATE. Hardcoded number used for restricted incoming phone numbers. -->
     <string name="handle_restricted">RESTRICTED</string>
+    <string name="select_account_dialog_title">Select Account</string>
 </resources>
